<resources>
    <string name="app_name">Unisound</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>

    <string name="home">Home</string>
    <string name="playlist">Playlist</string>
    <string name="like">Like</string>
    <string name="history">History</string>
    <string name="artist">Artist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
</resources>