<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/playlist"
        android:id="@+id/playlist"
        android:icon="@drawable/ic_playlist_24"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/history"
        android:id="@+id/history"
        android:icon="@drawable/ic_history_24"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/ic_home_24"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/like"
        android:id="@+id/like"
        android:icon="@drawable/ic_like_24"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/artist"
        android:id="@+id/artist"
        android:icon="@drawable/ic_artist_24"
        app:showAsAction="ifRoom"/>

</menu>